docs/0.246.0/zh/index.mdx
---
title: A3S Office 0.246.0 文档
description: 在应用中接入五种宿主可控的 Office 编辑器，支持实时协作，并让编码智能体处理真实 Office 文件。
---

# A3S Office 0.246.0 文档

这是 A3S Office 0.246.0 的冻结文档索引，提供本版本可用的 API、接入步骤和工程参考。


## 从这里开始

| 目标 | 文档入口 |
| --- | --- |
| 在应用中挂载第一个受控编辑器 | [快速开始](./guide/index.html) |
| 选择 React、Vue 或 Web Component | [组件接入](./components/index.html) |
| 配置某一种编辑器和内容模型 | [编辑器 API](./components/document.html) |
| 添加宿主操作或 TipTap Extension | [扩展机制](./components/extensions.html) |
| 让多人和编码智能体编辑同一文件 | [多人实时协作](./components/collaboration.html) |
| 部署带鉴权、广播和持久化的后端 | [A3S Boot 实时协作后端](./components/collaboration-server.html) |
| 让编码智能体读取或修改 Office 文件 | [CLI 与 Skill](./automation/index.html) |
| 查看近期版本发生了什么变化 | [更新日志](./changelog.html) |

## 编辑器组件

| 文件类型 | 公开组件 | 内容模型与实现 |
| --- | --- | --- |
| 文档 | [`DocumentEditor`](./components/document.html) | `DocumentContent`；TipTap / ProseMirror 与 A3S Office 排版内核 |
| Markdown | [`MarkdownEditor`](./components/markdown.html) | `MarkdownContent`；可视化编辑与受控源码 |
| 表格 | [`SpreadsheetEditor`](./components/spreadsheet.html) | `SpreadsheetContent`；稀疏工作簿与计算内核 |
| 演示文稿 | [`PresentationEditor`](./components/presentation.html) | `PresentationContent`；场景图与按需文本编辑 |
| PDF | [`PdfViewer`](./components/pdf.html) | `Blob` 输入/输出；PDFium WebAssembly 与批注控制器 |

所有框架绑定共享受控组件约定。宿主持有内容、保存状态、文件权限和生命周期，编辑器
通过类型化属性与事件返回状态变化。

## 多人实时协作

协作协议适用于全部五种编辑器和三种框架绑定。浏览器端使用 Yjs，原生智能体使用 Yrs，
宿主负责房间、身份、权限、Provider、离线队列和持久化。

- [协作协议与状态边界](./components/collaboration.html)
- [完整 A3S Boot 后端示例](./components/collaboration-server.html)

## `main` 更新内容（0.246.0）

文档页眉页脚撤销/重做与移除链接焦点还原：

- 页眉页脚功能区撤销/重做与移除链接，以及内联页眉页脚工具栏撤销/重做与移除链接，在应用时不再调用 TipTap `chain().focus()`。
- 焦点留在功能区或页眉页脚触发按钮，L2 页眉页脚编辑循环可继续操作。通过提示对话框添加链接后仍会还原页眉页脚编辑器焦点。


## 按表面探索

按编辑器表面整理的长期能力入口。优先从这里进入，而不是扫完每一条历史发布说明。

| 表面 | 从这里开始 |
| --- | --- |
| 文档 | [整段段落标记修订](./components/document.html#整段段落标记修订) · [移动修订](./components/document.html#移动修订) · [文档比较与合并](./components/document.html#文档比较与合并) · [有序列表编号修订](./components/document.html#有序列表编号修订) · [原生 OpenType 排版](./components/document.html#原生-opentype-排版) · [原生内容控件](./components/document.html#原生内容控件) · [常用实时字段](./components/document.html#常用实时字段) · [可编辑文本框](./components/document.html#可编辑文本框) · [图片属性](./components/document.html#图片属性) · [选择工具栏控件](./components/document.html#选择工具栏控件) |
| 表格 | [依赖下拉列表](./components/spreadsheet.html#依赖下拉列表) · [公式条件格式](./components/spreadsheet.html#公式条件格式) · [自定义公式](./components/spreadsheet.html#自定义公式) · [与 Office 一致的错误警告分支](./components/spreadsheet.html#与-office-一致的错误警告分支) · [XLSX 1904 日期系统保留](./components/spreadsheet.html#xlsx-1904-日期系统保留) |
| 演示文稿 | [进入与退出动画](./components/presentation.html#进入与退出动画) |
| PDF | [页面组织](./components/pdf.html#页面组织) |
| 自动化 | [A3S Test 门禁、模板发现与操作器流程](./automation/index.html) |
| 发布 | [支持版本冻结的更新日志](./changelog.html) |

## 工程参考

| 主题 | 参考文档 |
| --- | --- |
| 浏览器组件、Worker 与 WebAssembly 边界 | [浏览器编辑器架构](./browser-editor-architecture.html) |
| Rust 核心、CLI、MCP 与本地文件 | [本地 Office 引擎](./native-office-engine.html) |
| 质量门禁、性能指标与兼容性 | [编辑器质量路线图](./editor-quality-roadmap.html) |
| 命令、选择器和 JSON 协议 | [CLI 参考](./cli-reference.html) |

## 语言与版本

使用页面顶部的语言和版本控件切换简体中文、English 或冻结版本。搜索结果始终限制在
当前语言和版本，避免把不同版本的 API 混在一起。
